# snail_backend_specification

./: .gitattributes  .gitignore  AGENTS_PLAN.md  HANDOFF.md  IMPACT_ANALYSIS.md  ONBOARDING.md  README.md  SCENARIO_GUIDE.md  TECH_STACK.md  W0_CHECKLIST.md  W0_GUIDE.md
backend/: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 20260527_0001_initial_extensions.py  20260527_0900_initial_schema.py  20260527_1000_add_user_oauth_identities.py  20260527_1100_add_terms_acceptances.py  20260527_1200_add_design_search_indexes.py  20260527_1300_add_pre_a5_fk_indexes.py  20260527_1310_replace_design_embedding_hnsw_index.py  20260527_1400_add_reservation_constraints.py  20260528_0900_add_snap_tagged_indexes.py  20260528_0910_add_snap_saves.py  20260528_0920_add_user_image_view_mode.py  20260528_0930_add_shop_location_tags.py  20260528_0940_add_design_options.py
backend/app/: main.py  openapi_examples.py
backend/app/api/: deps.py  errors.py  middleware.py
backend/app/core/: config.py  database.py  gcs.py  logging.py  (+2 more)
backend/docker/: .dockerignore  Caddyfile  Caddyfile.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml
backend/docs/: API_ROADMAP.md  ARCHITECTURE.md  DB_SCHEMA.md  RESERVATION_FLOW.md
backend/prompts/: README.md  classify.md  transform.md
backend/scripts/: check.ps1  demo_reset.py  dev.ps1  seed.py
backend/tests/: community_factories.py  conftest.py
(+215 files in other folders)
